# Automated-Agentic-Research-Assistant

./: .env.copy  README.md  get_lib_versions.py  main.py  pyproject.toml  requirements.txt
notebooks/: test.ipynb
research_and_analyst/config/: configuration.yaml
research_and_analyst/notebooks/: test.ipynb
research_and_analyst/utils/: model_loader.py
