[build-system]
requires = ["setuptools>=68"]         # PEP 660 editable support ke liye naya setuptools
build-backend = "setuptools.build_meta"

[project]
name = "automated-research-assistant"
version = "0.1.0"
description = "automated-research-assistant"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langgraph==0.6.8",
    "langchain_community==0.3.30",
    "langchain_core==0.3.78",
    "ipykernel==6.30.1",
    "tavily-python==0.7.12",
    "wikipedia==1.4.0",
    "langchain-openai==0.3.32",
    "langchain-google-genai==2.1.8",
    "langchain-groq==0.3.8",
    "structlog==25.4.0",
]


# Optional: authors, license
authors = [{ name = "Rishabh Porwal" }]
license = { text = "Proprietary" }

[tool.setuptools.packages.find]
where = ["research_and_analyst"]
include = ["automated_research_report_generation*"]